ch4/code/cool-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cool-pod
  namespace: the-namespace
spec:
  containers:
  - name: cool-container
    image: cool/app:v1
  imagePullSecrets:
  - name: the-registry-secret
